--- a/src/main/java/ulb/mis/view/DoctorChoices.form
+++ b/src/main/java/ulb/mis/view/DoctorChoices.form
@@ -48,9 +48,9 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-                  <Component id="jButton1" min="-2" pref="139" max="-2" attributes="0"/>
+                  <Component id="ApprovalsButton" min="-2" pref="139" max="-2" attributes="0"/>
                   <EmptySpace pref="38" max="32767" attributes="0"/>
-                  <Component id="jButton2" min="-2" pref="144" max="-2" attributes="0"/>
+                  <Component id="AppointmentsButton" min="-2" pref="144" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -60,8 +60,8 @@
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButton1" alignment="3" min="-2" pref="98" max="-2" attributes="0"/>
-                      <Component id="jButton2" alignment="3" min="-2" pref="98" max="-2" attributes="0"/>
+                      <Component id="ApprovalsButton" alignment="3" min="-2" pref="98" max="-2" attributes="0"/>
+                      <Component id="AppointmentsButton" alignment="3" min="-2" pref="98" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="0" pref="83" max="32767" attributes="0"/>
               </Group>
@@ -69,20 +69,20 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="ApprovalsButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Approvals"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ApprovalsButtonActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton2">
+        <Component class="javax.swing.JButton" name="AppointmentsButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Appointments"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="AppointmentsButtonActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
